--- a/package.json
+++ b/package.json
@@ -30,12 +30,15 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
     "react-markdown": "^10.1.0",
+    "react-particles": "^2.12.2",
     "react-router-dom": "^7.4.0",
     "react-spinners": "^0.15.0",
     "rehype-highlight": "^7.0.2",
     "remark-gfm": "^4.0.1",
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.0.2",
+    "tsparticles": "^3.8.1",
+    "tsparticles-engine": "^2.12.0",
     "tw-animate-css": "^1.2.4",
     "use-mask-input": "^3.4.2",
     "xlsx": "^0.18.5",
